Adds log4j logger to the application